tests/baselines/reference/asyncConstructor_es6.errors.txt
tests/cases/conformance/async/es6/asyncConstructor_es6.ts(2,3): error TS1089: 'async' modifier cannot appear on a constructor declaration.


==== tests/cases/conformance/async/es6/asyncConstructor_es6.ts (1 errors) ====
    class C {  
      async constructor() {    
      ~~~~~
!!! error TS1089: 'async' modifier cannot appear on a constructor declaration.
      }
    }